:bug: fix avatar zindex too high

--- a/src/layout/avatarDropdown/avatarDropdown.css
+++ b/src/layout/avatarDropdown/avatarDropdown.css
@@ -18,5 +18,5 @@
 }
 
 .avatar-dropdown {
-  z-index: 110;
+  z-index: 100;
 }
